test/log/load/vldcb2in0_v_u64.txt
vldcb2in0_v_u64.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vldcb2in0_v_u64.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vldcb2in0_v_u64.c:37:6: warning: no previous prototype for 'vldcb2in0_v_u64_golden' [-Wmissing-prototypes]
   37 | void vldcb2in0_v_u64_golden(uint64_t *base,uint32_t imm,uint64_t exp_result[][ELE_NUM]) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vldcb2in0_v_u64.c: In function 'vldcb2in0_v_u64_golden':
vldcb2in0_v_u64.c:37:53: warning: unused parameter 'imm' [-Wunused-parameter]
   37 | void vldcb2in0_v_u64_golden(uint64_t *base,uint32_t imm,uint64_t exp_result[][ELE_NUM]) {
      |                                            ~~~~~~~~~^~~
vldcb2in0_v_u64.c: In function 'main':
vldcb2in0_v_u64.c:77:55: warning: format '%d' expects argument of type 'int', but argument 4 has type 'long long unsigned int' [-Wformat=]
   77 |                 printf("Failed: result.val[%d][%d] = %d, exp_result[%d][%d] = %d\n", i,j, result.val[i][j], i,j, exp_result[i][j]);
      |                                                      ~^                                   ~~~~~~~~~~~~~~~~
      |                                                       |                                                |
      |                                                       int                                              long long unsigned int
      |                                                      %lld
vldcb2in0_v_u64.c:77:80: warning: format '%d' expects argument of type 'int', but argument 7 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   77 |                 printf("Failed: result.val[%d][%d] = %d, exp_result[%d][%d] = %d\n", i,j, result.val[i][j], i,j, exp_result[i][j]);
      |                                                                               ~^                                 ~~~~~~~~~~~~~~~~
      |                                                                                |                                              |
      |                                                                                int                                            uint64_t {aka long long unsigned int}
      |                                                                               %lld
vldcb2in0_v_u64.c:51:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   51 |     uint32_t imm;
      |              ^~~
during RTL pass: dse1
vldcb2in0_v_u64.c:93:1: internal compiler error: in smallest_mode_for_size, at stor-layout.c:356
   93 | }
      | ^
0xd029c7 smallest_mode_for_size(poly_int<1u, unsigned long>, mode_class)
	../../../riscv-gcc/gcc/stor-layout.c:356
0x7ed263 smallest_int_mode_for_size(poly_int<1u, unsigned long>)
	../../../riscv-gcc/gcc/machmode.h:879
0x7ed263 find_shift_sequence
	../../../riscv-gcc/gcc/dse.c:1731
0x7ed263 get_stored_val
	../../../riscv-gcc/gcc/dse.c:1875
0x7ed6e3 replace_read
	../../../riscv-gcc/gcc/dse.c:1980
0x17cf2df check_mem_read_rtx
	../../../riscv-gcc/gcc/dse.c:2262
0x17cf2df check_mem_read_use
	../../../riscv-gcc/gcc/dse.c:2368
0xcb6b6c note_uses(rtx_def**, void (*)(rtx_def**, void*), void*)
	../../../riscv-gcc/gcc/rtlanal.c:2030
0x17d086c scan_insn
	../../../riscv-gcc/gcc/dse.c:2477
0x17d086c dse_step1
	../../../riscv-gcc/gcc/dse.c:2742
0x17d086c rest_of_handle_dse
	../../../riscv-gcc/gcc/dse.c:3659
0x17d086c execute
	../../../riscv-gcc/gcc/dse.c:3720
Please submit a full bug report,
with preprocessed source if appropriate.
Please include the complete backtrace with any bug report.
See <https://gcc.gnu.org/bugs/> for instructions.
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb2in0_v_u64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vldcb2in0_v_u64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vldcb2in0_v_u64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb2in0_v_u64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed